--- a/index.html
+++ b/index.html
@@ -542,8 +542,8 @@ In-depth study of technologies such as Node.js, databases and APIs to create mor
   
           <li class="skills-item">
               <div class="title-wrapper">
-                  <h5 class="h5">Scss</h5>
-                  <data value="70">70%</data>
+                  <h5 class="h5">C/C++</h5>
+                  <data value="25">70%</data>
               </div>
               <div class="skill-progress-bg">
                   <div class="skill-progress-fill" style="width: 70%;"></div>
