--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@ In-depth study of technologies such as Node.js, databases and APIs to create mor
   
           <li class="skills-item">
               <div class="title-wrapper">
-                  <h5 class="h5">Node.js</h5>
+                  <h5 class="h5">Java</h5>
                   <data value="85">85%</data>
               </div>
               <div class="skill-progress-bg">
@@ -526,7 +526,7 @@ In-depth study of technologies such as Node.js, databases and APIs to create mor
                   <data value="80">45%</data>
               </div>
               <div class="skill-progress-bg">
-                  <div class="skill-progress-fill" style="width: 80%;"></div>
+                  <div class="skill-progress-fill" style="width: 45%;"></div>
               </div>
           </li>
   
@@ -542,7 +542,7 @@ In-depth study of technologies such as Node.js, databases and APIs to create mor
   
           <li class="skills-item">
               <div class="title-wrapper">
-                  <h5 class="h5">C/C++</h5>
+                  <h5 class="h5">Js</h5>
                   <data value="25">70%</data>
               </div>
               <div class="skill-progress-bg">
@@ -572,7 +572,7 @@ In-depth study of technologies such as Node.js, databases and APIs to create mor
 
           <li class="skills-item">
             <div class="title-wrapper">
-                <h5 class="h5">Js</h5>
+                <h5 class="h5">node.Js</h5>
                 <data value="16">16%</data>
             </div>
             <div class="skill-progress-bg">
