--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
         <section class="about-text">
           <p>
-            I develop Discord bots in Python and want to learn frontend basics. I'm familiar with various databases and programming languages.
+            I develop Discord bots/full stack developer/software developer i prefer use Spring for backend and react for front end. I`m familiar with various databases and programming languages.
           </p>
         </section>
 
